--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -3,4 +3,10 @@ DEBUG=1
 ALLOWED_HOSTS=*
 
 # django secret key
-SECRET_KEY = 'django-insecure-h9809)m5!#vid7h37a8w0o7%cdkwmd$88(a7luy8gtqnq2^@lp'
+SECRET_KEY=django-insecure-h9809)m5!#vid7h37a8w0o7%cdkwmd$88(a7luy8gtqnq2^@lp
+
+# JWT settings
+SIMPLE_JWT_ACCESS_TOKEN_LIFETIME_IN_DAY=1
+SIMPLE_JWT_REFRESH_TOKEN_LIFETIME_IN_DAY=15
+SIMPLE_JWT_SIGNING_KEY=jwt-sample-key-django-insecure-h9809)m5!#vid7h37a8w0o7%cdkwmd$88(a7luy8gtqnq2^@lp
+SIMPLE_JWT_ALGORITHM=HS256
