1. 구글 및 페이스북 토큰 검증과 세션관리(SignInView 구현)

--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -5,6 +5,12 @@ ALLOWED_HOSTS=*
 # django secret key
 SECRET_KEY=django-insecure-h9809)m5!#vid7h37a8w0o7%cdkwmd$88(a7luy8gtqnq2^@lp
 
+# skip some verification(phone number verification, user verification)
+TEST_MODE_ON=1
+
+# for google oauth2. to authenticate token in google authentication server
+FLASHSALE_GOOGLE_CLIENT_ID=test-google-client-id.apps.googleusercontent.com
+
 # JWT settings
 SIMPLE_JWT_ACCESS_TOKEN_LIFETIME_IN_DAY=1
 SIMPLE_JWT_REFRESH_TOKEN_LIFETIME_IN_DAY=15
