1. facebook - 백엔드에서 facebook의 access token 인증하는 코드 추가

--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -16,3 +16,7 @@ SIMPLE_JWT_ACCESS_TOKEN_LIFETIME_IN_DAY=1
 SIMPLE_JWT_REFRESH_TOKEN_LIFETIME_IN_DAY=15
 SIMPLE_JWT_SIGNING_KEY=jwt-sample-key-django-insecure-h9809)m5!#vid7h37a8w0o7%cdkwmd$88(a7luy8gtqnq2^@lp
 SIMPLE_JWT_ALGORITHM=HS256
+
+# Facebook Auth
+SOCIAL_AUTH_FACEBOOK_KEY=facebook-app-key
+SOCIAL_AUTH_FACEBOOK_SECRET=facebook-app-secret
