1. migration으로 카테고리 초기 데이터 추가할 수 있도록 0002_create_data.py 작성

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# sqlite
+py# sqlite
 *.sqlite3
 
 # migrations files
-accounts/migrations
-flashsale/migrations
+# accounts/migrations
+# flashsale/migrations
 
 # Miscellaneous
 *.class
