1. registerproduct API 추가 2. ProductDetailSerializer, ProductSerializer 추가 3. Product 모델에서 comment 필드 추가 4. Product 모델에서 서버에 저장되는 이미지 이름 변경 추가(upload_to) 5. setting.py에 static 파일과 media파일 저장 장소 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 py# sqlite
 *.sqlite3
 
+assets/log
+assets/media
+assets/static
+
 # migrations files
 # accounts/migrations
 # flashsale/migrations
