--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -20,3 +20,12 @@ SIMPLE_JWT_ALGORITHM=HS256
 # Facebook Auth
 SOCIAL_AUTH_FACEBOOK_KEY=facebook-app-key
 SOCIAL_AUTH_FACEBOOK_SECRET=facebook-app-secret
+
+# setting for aws
+# FLASHSALE_STORAGE_TYPE=s3
+FLASHSALE_STORAGE_TYPE=file
+# access key to access S3 dev bucket
+AWS_ACCESS_KEY_ID=aws_access_key
+AWS_SECRET_ACCESS_KEY=aws_secret_access_key
+AWS_STORAGE_BUCKET_NAME=aws_bucket_name
+AWS_DEFAULT_REGION=ap-northeast-2
