1. redis cache 설정 2. getcategory API 추가   - 가게 카테고리를 가져오는 함수 3. getcategroy 호출에 대한 결과값 생성시 cache 사용

--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -29,3 +29,9 @@ AWS_ACCESS_KEY_ID=aws_access_key
 AWS_SECRET_ACCESS_KEY=aws_secret_access_key
 AWS_STORAGE_BUCKET_NAME=aws_bucket_name
 AWS_DEFAULT_REGION=ap-northeast-2
+
+# cache settings for redis
+CACHES_DEFAULT_BACKEND=django_redis.cache.RedisCache
+# use test redis created in https://redislabs.com/
+CACHES_DEFAULT_LOCATION=redis://redis_address_port_here
+CACHES_DEFAULT_OPTIONS_CLIENT_CLASS=django_redis.client.DefaultClient
