1. post signal을 사용해서 push 동작 확인

--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -35,3 +35,6 @@ CACHES_DEFAULT_BACKEND=django_redis.cache.RedisCache
 # use test redis created in https://redislabs.com/
 CACHES_DEFAULT_LOCATION=redis://redis_address_port_here
 CACHES_DEFAULT_OPTIONS_CLIENT_CLASS=django_redis.client.DefaultClient
+
+# FCM server key
+FCM_SERVER_KEY=FCM_SERVER_KEY_HERE
