1. celery를 사용한 push 전송 추가

--- a/.private/debug/.env
+++ b/.private/debug/.env
@@ -38,3 +38,6 @@ CACHES_DEFAULT_OPTIONS_CLIENT_CLASS=django_redis.client.DefaultClient
 
 # FCM server key
 FCM_SERVER_KEY=FCM_SERVER_KEY_HERE
+
+# celery broker url
+CELERY_BROKER_URL=redis://redis_address_port_here
